--- a/play freeze-out.ipynb
+++ b/play freeze-out.ipynb
@@ -21,7 +21,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "5626f919",
+   "id": "6816d9bc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,14 +33,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "946884f6",
+   "id": "510c60e5",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "c663878e",
+   "id": "11a5ce06",
    "metadata": {},
    "source": [
     "## Here just playng with the particle number density, nothing importat"
@@ -162,14 +162,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "54fd621e",
+   "id": "1694f012",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "31a1bccd",
+   "id": "3e4818f6",
    "metadata": {},
    "source": [
     "## Trying to parametrize the relativistic degree of freedom"
@@ -178,7 +178,7 @@
   {
    "cell_type": "code",
    "execution_count": 230,
-   "id": "0f12629e",
+   "id": "79f0f6fb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -188,7 +188,7 @@
   {
    "cell_type": "code",
    "execution_count": 259,
-   "id": "8ff6170b",
+   "id": "16f14894",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -210,7 +210,7 @@
   {
    "cell_type": "code",
    "execution_count": 260,
-   "id": "ac88a596",
+   "id": "fc2f430e",
    "metadata": {},
    "outputs": [
     {
@@ -313,7 +313,7 @@
   {
    "cell_type": "code",
    "execution_count": 261,
-   "id": "ef29015d",
+   "id": "2aac9671",
    "metadata": {},
    "outputs": [
     {
@@ -343,7 +343,7 @@
   {
    "cell_type": "code",
    "execution_count": 262,
-   "id": "8fec1dd0",
+   "id": "bbdb36cc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -353,7 +353,7 @@
   {
    "cell_type": "code",
    "execution_count": 263,
-   "id": "fea69770",
+   "id": "ccac016a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -370,7 +370,7 @@
   {
    "cell_type": "code",
    "execution_count": 264,
-   "id": "9889b8ca",
+   "id": "37802390",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -389,7 +389,7 @@
   {
    "cell_type": "code",
    "execution_count": 265,
-   "id": "5f144cf7",
+   "id": "241d1681",
    "metadata": {},
    "outputs": [
     {
@@ -412,7 +412,7 @@
   {
    "cell_type": "code",
    "execution_count": 266,
-   "id": "8a3b1d98",
+   "id": "a8de27b9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -427,7 +427,7 @@
   {
    "cell_type": "code",
    "execution_count": 267,
-   "id": "1a3c8b2f",
+   "id": "1d47a8c5",
    "metadata": {},
    "outputs": [
     {
@@ -477,7 +477,7 @@
     }
    },
    "cell_type": "markdown",
-   "id": "544ae289",
+   "id": "55fa0e73",
    "metadata": {},
    "source": [
     "![g_star.png](attachment:g_star.png)"
@@ -486,7 +486,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "28d12633",
+   "id": "e6ad1e92",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -494,14 +494,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "25be0ddb",
+   "id": "eb4debe7",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "dd41037b",
+   "id": "430e668d",
    "metadata": {},
    "source": [
     "\n",
@@ -510,7 +510,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "64791cd6",
+   "id": "8de85846",
    "metadata": {},
    "source": [
     "$$ Y_{eq}(x)= \\frac{45}{2 \\pi^4} \\frac{g}{g_{*s}}x^{3/2}e^{-x}= 0.145 \\frac{g}{g_{*s}}x^{3/2}e^{-x} $$"
@@ -518,7 +518,15 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a47dd69b",
+   "id": "1a2be4af",
+   "metadata": {},
+   "source": [
+    "### $\\frac{g}{g_{*s}}$ what I have to do with this fraction? And isn't missing also a factor $\\Bigl(\\frac{\\pi}{8}\\Bigr)^{1/2}?$  Maybe not"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "20beddad",
    "metadata": {},
    "source": [
     "$$ g_*(T)= \\sum_{boson} g_i \\Bigl( \\frac{T_i}{T} \\Bigr)^4 + \\frac{7}{8}\\sum_{fermions} g_i \\Bigl( \\frac{T_i}{T} \\Bigr)^4 $$"
@@ -526,7 +534,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "db5c39ee",
+   "id": "30f04cfd",
    "metadata": {},
    "source": [
     "$$ g_{*s}(T)= \\sum_{boson} g_i \\Bigl( \\frac{T_i}{T} \\Bigr)^4 + \\frac{7}{8}\\sum_{fermions} g_i \\Bigl( \\frac{T_i}{T} \\Bigr)^4 $$"
@@ -534,7 +542,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "34bc7f4f",
+   "id": "af0adc82",
    "metadata": {},
    "source": [
     "## Under here is with the use of the function g_good"
@@ -543,7 +551,7 @@
   {
    "cell_type": "code",
    "execution_count": 268,
-   "id": "f8aa4958",
+   "id": "f12b46b4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -576,7 +584,7 @@
   {
    "cell_type": "code",
    "execution_count": 269,
-   "id": "d8282eb8",
+   "id": "62756e3c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -587,7 +595,7 @@
   {
    "cell_type": "code",
    "execution_count": 270,
-   "id": "edea8e18",
+   "id": "c9a7e55a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -603,7 +611,7 @@
   {
    "cell_type": "code",
    "execution_count": 271,
-   "id": "0b771753",
+   "id": "839ae475",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -616,7 +624,7 @@
   {
    "cell_type": "code",
    "execution_count": 272,
-   "id": "fb5a64e0",
+   "id": "ed66ebd7",
    "metadata": {},
    "outputs": [
     {
@@ -702,7 +710,7 @@
   {
    "cell_type": "code",
    "execution_count": 273,
-   "id": "eb463a7c",
+   "id": "f1372af3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -715,7 +723,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0a1440eb",
+   "id": "019ded81",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -723,14 +731,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "725bf3a6",
+   "id": "70485ec2",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "061de759",
+   "id": "71cdc360",
    "metadata": {},
    "source": [
     "## Under here is without the use of the function g_good"
@@ -739,7 +747,7 @@
   {
    "cell_type": "code",
    "execution_count": 274,
-   "id": "253db4d7",
+   "id": "6dd9d8f3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -771,7 +779,7 @@
   {
    "cell_type": "code",
    "execution_count": 275,
-   "id": "74bdb29c",
+   "id": "44086dbe",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -782,7 +790,7 @@
   {
    "cell_type": "code",
    "execution_count": 276,
-   "id": "bb9f7e7d",
+   "id": "b4310ba7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -798,7 +806,7 @@
   {
    "cell_type": "code",
    "execution_count": 277,
-   "id": "3c9cca16",
+   "id": "2375a1a9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -809,7 +817,7 @@
   {
    "cell_type": "code",
    "execution_count": 278,
-   "id": "53364905",
+   "id": "8ed45fc0",
    "metadata": {},
    "outputs": [
     {
@@ -904,7 +912,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "60e9484d",
+   "id": "acff4bfd",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -912,7 +920,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c72bd29b",
+   "id": "5f17b561",
    "metadata": {},
    "outputs": [],
    "source": []
