--- a/play freeze-out.ipynb
+++ b/play freeze-out.ipynb
@@ -153,7 +153,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# okay it follow sthe right behaviour of the equilibrium of particles.\n",
+    "# okay it follow the right behaviour of the equilibrium of particles.\n",
     "\n",
     "#But also the massive particles had their period in which they obey at the radiation behaviour, no?\n",
     "#And then starts to be a non radiative one (as the one just plotted), do we have to consider it?\n"
@@ -203,8 +203,7 @@
     "    {'T':50,'gstar_squar':np.sqrt(96.25)},     #taken from the presentation graphic\n",
     "    {'T':100,'gstar_squar':10.2}      #I leave it too\n",
     "    ])\n",
-    "\n",
-    "#geff stands for g efficace"
+    "\n"
    ]
   },
   {
@@ -362,8 +361,8 @@
     "def f(T,a,b,c,d,e,f): \n",
     "    return a/(1+np.exp(-b*(T-c)))+d+e+(f*T**2)\n",
     "\n",
-    "#function that define the phase space....NO\n",
-    "#what is it???\n",
+    "#function that shoud parametrize the g star functions in principle\n",
+    "#Chosen an activation function for similarity\n",
     "#******"
    ]
   },
@@ -376,6 +375,7 @@
    "source": [
     "param,somthing =optimize.curve_fit(f,dfgstar_squar['T'],dfgstar_squar['gstar_squar'],p0=(0,0,0,0,0,0))  #***(added a 0)\n",
     "\n",
+    "\n",
     "# Use non-linear least squares to fit a function, f, to data.\n",
     "\n",
     "# scipy.optimize.curve_fit(f, xdata, ydata, p0=None, sigma=None, absolute_sigma=False, check_finite=True,\n",
@@ -383,7 +383,7 @@
     "\n",
     "#p gives initial guess for the parameters\n",
     "\n",
-    "#what is it done for?"
+    "#gives the right values for the parameters of the function"
    ]
   },
   {
@@ -405,8 +405,8 @@
     }
    ],
    "source": [
-    "param  # OH, SO B HAS INSIDE THE VALUES OF THE PARAMETERS OF THE PHASE SPACE a,b,c RIGHT?\n",
-    "    #YOU GET THEM BY FITTING SOME DATA REFERRING TO A PLOT OF g_eff"
+    "param  # param HAS INSIDE THE VALUES OF THE PARAMETERS\n",
+    "    #YOU GET THEM BY FITTING SOME DATA TAKEN FROM A PLOT OF g star"
    ]
   },
   {
@@ -418,10 +418,7 @@
    "source": [
     "g_good= lambda T: f(T,a=param[0],b=param[1],c=param[2],d=param[3],e=param[4],f=param[5])  \n",
     "\n",
-    "\n",
-    "#this is a function just to call the \"function\". \n",
-    "                                        #Yess because now I know all the parameters\n",
-    "                            #NOW HERE WE BUILD THE RIGHT PHASE SPACE FUNCTION....no"
+    "#this is a function just to call the right \"function\" with inside the right parameters in principle.                         "
    ]
   },
   {
@@ -454,12 +451,13 @@
     "#plt.legend()\n",
     "plt.grid()\n",
     "\n",
-    "#looking to the behaviour of g_*?\n",
+    "#looking to the behaviour of g_*\n",
     "\n",
     "\n",
     "\n",
-    "#So far was clear, but I didn't understand where does the formula of the g_star comes from.********\n",
-    "#that plot was to verify that the function we've biult respect the data we have."
+    "#the parametrization of g_* must be done in a better way\n",
+    "#that plot was to verify that the function we've biult respect the data we have.\n",
+    "#not good\n"
    ]
   },
   {
@@ -685,7 +683,7 @@
     "\n",
     "\n",
     "plt.hlines(1E-11,1,1000,linestyles='-',color='g',lw=2,label='$Y_0$')    #THAT'S THE HORIZONTAL LINE IN PURPLE. \n",
-    "                                                                #REFERS TO THE RIGHT EXPERIMENTAL ABOUNDANCE found \n",
+    "                                                                #REFERS TO THE RIGHT EXPERIMENTAL ABOUNDANCE\n",
     "\n",
     "\n",
     "plt.ylim(1E-14,1)\n",
@@ -696,7 +694,7 @@
     "plt.legend()\n",
     "plt.grid()\n",
     "\n",
-    "# x grows in time means that the temperature decrease!!"
+    "# x grows in time means that the temperature decrease"
    ]
   },
   {
@@ -707,9 +705,10 @@
    "outputs": [],
    "source": [
     "# I was wondering if we had to consider also the radiation era when the co-omiving number density\n",
-    "# is constant to get a much complete description, but probably it's irrelevant,\n",
-    "# due to the fact that we are interested to the freeze-out part, and the previous\n",
-    "# one is kind of \"boring\" because is constant."
+    "# is constant to get a much complete description, but probably it's irrelevant.\n",
+    "\n",
+    "# We are interested to the freeze-out part, and the previous\n",
+    "# one is kind of \"trivial\" because is constant."
    ]
   },
   {
@@ -898,7 +897,7 @@
     "plt.legend()\n",
     "plt.grid()\n",
     "\n",
-    "# x grows in time means that the temperature decrease!!"
+    "# x grows in time means that the temperature decrease"
    ]
   },
   {
