--- a/play freeze-out.ipynb
+++ b/play freeze-out.ipynb
@@ -54,48 +54,7 @@
    "outputs": [],
    "source": [
     "x=np.linspace(2,4,100)\n",
-    "s=np.sin(x)\n",
-    "z=special.zeta(x)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "id": "c7e744bd",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([2.        , 2.02020202, 2.04040404, 2.06060606, 2.08080808,\n",
-       "       2.1010101 , 2.12121212, 2.14141414, 2.16161616, 2.18181818,\n",
-       "       2.2020202 , 2.22222222, 2.24242424, 2.26262626, 2.28282828,\n",
-       "       2.3030303 , 2.32323232, 2.34343434, 2.36363636, 2.38383838,\n",
-       "       2.4040404 , 2.42424242, 2.44444444, 2.46464646, 2.48484848,\n",
-       "       2.50505051, 2.52525253, 2.54545455, 2.56565657, 2.58585859,\n",
-       "       2.60606061, 2.62626263, 2.64646465, 2.66666667, 2.68686869,\n",
-       "       2.70707071, 2.72727273, 2.74747475, 2.76767677, 2.78787879,\n",
-       "       2.80808081, 2.82828283, 2.84848485, 2.86868687, 2.88888889,\n",
-       "       2.90909091, 2.92929293, 2.94949495, 2.96969697, 2.98989899,\n",
-       "       3.01010101, 3.03030303, 3.05050505, 3.07070707, 3.09090909,\n",
-       "       3.11111111, 3.13131313, 3.15151515, 3.17171717, 3.19191919,\n",
-       "       3.21212121, 3.23232323, 3.25252525, 3.27272727, 3.29292929,\n",
-       "       3.31313131, 3.33333333, 3.35353535, 3.37373737, 3.39393939,\n",
-       "       3.41414141, 3.43434343, 3.45454545, 3.47474747, 3.49494949,\n",
-       "       3.51515152, 3.53535354, 3.55555556, 3.57575758, 3.5959596 ,\n",
-       "       3.61616162, 3.63636364, 3.65656566, 3.67676768, 3.6969697 ,\n",
-       "       3.71717172, 3.73737374, 3.75757576, 3.77777778, 3.7979798 ,\n",
-       "       3.81818182, 3.83838384, 3.85858586, 3.87878788, 3.8989899 ,\n",
-       "       3.91919192, 3.93939394, 3.95959596, 3.97979798, 4.        ])"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "x"
+    "s=np.sin(x)"
    ]
   },
   {
@@ -535,7 +494,7 @@
    "id": "1e3cd22f",
    "metadata": {},
    "source": [
-    "## Under here is with the use of the function g_good"
+    "## Computation with the use of the function g_good"
    ]
   },
   {
@@ -732,7 +691,7 @@
    "id": "881ad319",
    "metadata": {},
    "source": [
-    "## Under here is without the use of the function g_good"
+    "## Computation without the use of the function g_good"
    ]
   },
   {
