--- a/WIMP_relic_computation.ipynb
+++ b/WIMP_relic_computation.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 359,
-   "id": "a2468645",
+   "id": "111a5ba0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   {
    "cell_type": "code",
    "execution_count": 360,
-   "id": "156f593c",
+   "id": "c120066e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +25,7 @@
   {
    "cell_type": "code",
    "execution_count": 387,
-   "id": "c7111a47",
+   "id": "8ea6b702",
    "metadata": {},
    "outputs": [
     {
@@ -59,7 +59,7 @@
     }
    },
    "cell_type": "markdown",
-   "id": "5d8cee7a",
+   "id": "862f9250",
    "metadata": {},
    "source": [
     "![g_star.png](attachment:g_star.png)"
@@ -68,7 +68,7 @@
   {
    "cell_type": "code",
    "execution_count": 62,
-   "id": "6e4f4a2c",
+   "id": "79884cad",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -79,7 +79,7 @@
   {
    "cell_type": "code",
    "execution_count": 63,
-   "id": "e455d3c7",
+   "id": "1b85c180",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -89,7 +89,7 @@
   {
    "cell_type": "code",
    "execution_count": 64,
-   "id": "c1ba7ac8",
+   "id": "f9c723fa",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -99,7 +99,7 @@
   {
    "cell_type": "code",
    "execution_count": 65,
-   "id": "5529ef7b",
+   "id": "bad385a9",
    "metadata": {},
    "outputs": [
     {
@@ -217,7 +217,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a67bd484",
+   "id": "31550f90",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -225,7 +225,7 @@
   {
    "cell_type": "code",
    "execution_count": 540,
-   "id": "e6ec837b",
+   "id": "c57aba69",
    "metadata": {},
    "outputs": [
     {
@@ -275,7 +275,7 @@
   {
    "cell_type": "code",
    "execution_count": 453,
-   "id": "46b49294",
+   "id": "7fc2512d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -309,7 +309,7 @@
   {
    "cell_type": "code",
    "execution_count": 454,
-   "id": "6817a032",
+   "id": "095dbfcd",
    "metadata": {},
    "outputs": [
     {
@@ -378,7 +378,7 @@
   {
    "cell_type": "code",
    "execution_count": 455,
-   "id": "6d885f70",
+   "id": "e5075675",
    "metadata": {},
    "outputs": [
     {
@@ -447,7 +447,7 @@
   {
    "cell_type": "code",
    "execution_count": 456,
-   "id": "fbdfb50a",
+   "id": "e4d6bb8f",
    "metadata": {},
    "outputs": [
     {
@@ -468,7 +468,7 @@
   {
    "cell_type": "code",
    "execution_count": 457,
-   "id": "4a8737e8",
+   "id": "934bfc5c",
    "metadata": {},
    "outputs": [
     {
@@ -489,7 +489,7 @@
   {
    "cell_type": "code",
    "execution_count": 458,
-   "id": "8a9c51ae",
+   "id": "344652ac",
    "metadata": {},
    "outputs": [
     {
@@ -510,7 +510,7 @@
   {
    "cell_type": "code",
    "execution_count": 459,
-   "id": "d26e3c2a",
+   "id": "bd626987",
    "metadata": {},
    "outputs": [
     {
@@ -531,7 +531,7 @@
   {
    "cell_type": "code",
    "execution_count": 460,
-   "id": "2f297a00",
+   "id": "4ab91693",
    "metadata": {},
    "outputs": [
     {
@@ -552,7 +552,7 @@
   {
    "cell_type": "code",
    "execution_count": 461,
-   "id": "2a91e5e8",
+   "id": "bf8fb56c",
    "metadata": {},
    "outputs": [
     {
@@ -573,7 +573,7 @@
   {
    "cell_type": "code",
    "execution_count": 462,
-   "id": "cd1704a5",
+   "id": "7bc2d028",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -584,7 +584,7 @@
   {
    "cell_type": "code",
    "execution_count": 463,
-   "id": "137415f9",
+   "id": "589c16ec",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -594,7 +594,7 @@
   {
    "cell_type": "code",
    "execution_count": 464,
-   "id": "25a5c5c1",
+   "id": "cd922e6b",
    "metadata": {},
    "outputs": [
     {
@@ -615,7 +615,7 @@
   {
    "cell_type": "code",
    "execution_count": 465,
-   "id": "47ae27e6",
+   "id": "2c5180de",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -626,7 +626,7 @@
   {
    "cell_type": "code",
    "execution_count": 466,
-   "id": "63996eb0",
+   "id": "859b2fe8",
    "metadata": {},
    "outputs": [
     {
@@ -656,7 +656,7 @@
   {
    "cell_type": "code",
    "execution_count": 467,
-   "id": "cf6acd62",
+   "id": "7a677778",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -667,7 +667,7 @@
   {
    "cell_type": "code",
    "execution_count": 468,
-   "id": "41e0fb1b",
+   "id": "9aa7c830",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -677,7 +677,7 @@
   {
    "cell_type": "code",
    "execution_count": 469,
-   "id": "091e516f",
+   "id": "b210bcf2",
    "metadata": {},
    "outputs": [
     {
@@ -698,7 +698,7 @@
   {
    "cell_type": "code",
    "execution_count": 470,
-   "id": "48afb59c",
+   "id": "5c103555",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -709,7 +709,7 @@
   {
    "cell_type": "code",
    "execution_count": 471,
-   "id": "6d8a950e",
+   "id": "443fa873",
    "metadata": {},
    "outputs": [
     {
@@ -739,7 +739,7 @@
   {
    "cell_type": "code",
    "execution_count": 472,
-   "id": "63077b79",
+   "id": "056a8818",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -750,7 +750,7 @@
   {
    "cell_type": "code",
    "execution_count": 473,
-   "id": "9c845254",
+   "id": "b449ed8a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -760,7 +760,7 @@
   {
    "cell_type": "code",
    "execution_count": 474,
-   "id": "cd0b3768",
+   "id": "00408f99",
    "metadata": {},
    "outputs": [
     {
@@ -781,7 +781,7 @@
   {
    "cell_type": "code",
    "execution_count": 475,
-   "id": "a3d46a45",
+   "id": "785d9e59",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -792,7 +792,7 @@
   {
    "cell_type": "code",
    "execution_count": 476,
-   "id": "6e4fcab8",
+   "id": "c298bec3",
    "metadata": {},
    "outputs": [
     {
@@ -822,7 +822,7 @@
   {
    "cell_type": "code",
    "execution_count": 544,
-   "id": "60a81e28",
+   "id": "031e9ae6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -833,7 +833,7 @@
   {
    "cell_type": "code",
    "execution_count": 545,
-   "id": "313b8a17",
+   "id": "74dd9287",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -843,7 +843,7 @@
   {
    "cell_type": "code",
    "execution_count": 546,
-   "id": "ad0e4089",
+   "id": "4a270042",
    "metadata": {},
    "outputs": [
     {
@@ -864,7 +864,7 @@
   {
    "cell_type": "code",
    "execution_count": 547,
-   "id": "faefe15d",
+   "id": "bb17108d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -875,7 +875,7 @@
   {
    "cell_type": "code",
    "execution_count": 548,
-   "id": "475e1d89",
+   "id": "a6bbc0e5",
    "metadata": {},
    "outputs": [
     {
@@ -905,7 +905,7 @@
   {
    "cell_type": "code",
    "execution_count": 549,
-   "id": "36f1d38a",
+   "id": "b6735f15",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -916,7 +916,7 @@
   {
    "cell_type": "code",
    "execution_count": 550,
-   "id": "bfed5e58",
+   "id": "2bc15326",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -926,7 +926,7 @@
   {
    "cell_type": "code",
    "execution_count": 551,
-   "id": "a82c4eef",
+   "id": "43b8a54f",
    "metadata": {},
    "outputs": [
     {
@@ -947,7 +947,7 @@
   {
    "cell_type": "code",
    "execution_count": 552,
-   "id": "b9f4ecb9",
+   "id": "1506b595",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -958,7 +958,7 @@
   {
    "cell_type": "code",
    "execution_count": 553,
-   "id": "0aa8f654",
+   "id": "e92fb6ff",
    "metadata": {},
    "outputs": [
     {
@@ -988,7 +988,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ae0486a5",
+   "id": "5b7c14f4",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -996,7 +996,7 @@
   {
    "cell_type": "code",
    "execution_count": 554,
-   "id": "5cc5d1bd",
+   "id": "86b71507",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1007,7 +1007,7 @@
   {
    "cell_type": "code",
    "execution_count": 555,
-   "id": "f6aa0083",
+   "id": "f1a76a8a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1017,7 +1017,7 @@
   {
    "cell_type": "code",
    "execution_count": 556,
-   "id": "5353f01b",
+   "id": "971f3846",
    "metadata": {},
    "outputs": [
     {
@@ -1038,7 +1038,7 @@
   {
    "cell_type": "code",
    "execution_count": 557,
-   "id": "e7ca3099",
+   "id": "9795539f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1049,7 +1049,7 @@
   {
    "cell_type": "code",
    "execution_count": 558,
-   "id": "3b22361b",
+   "id": "531223af",
    "metadata": {},
    "outputs": [
     {
@@ -1079,7 +1079,7 @@
   {
    "cell_type": "code",
    "execution_count": 559,
-   "id": "4ae3d362",
+   "id": "34eabd98",
    "metadata": {},
    "outputs": [
     {
@@ -1119,7 +1119,7 @@
   {
    "cell_type": "code",
    "execution_count": 565,
-   "id": "5ee78c32",
+   "id": "38e803cb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1129,7 +1129,7 @@
   {
    "cell_type": "code",
    "execution_count": 566,
-   "id": "ca6b8261",
+   "id": "21fe4ecf",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1140,16 +1140,100 @@
   },
   {
    "cell_type": "markdown",
-   "id": "48fdd220",
+   "id": "04121601",
    "metadata": {},
    "source": [
     "$$\\frac{dY}{dx}=- \\Bigl(\\frac{45}{\\pi M_P^2}\\Bigr)^{-1/2} \\frac{g_*^{1/2}m}{x^2} \\langle\\sigma v\\rangle(Y^2-Y_{eq}^2)$$"
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "f4372a8f",
+   "metadata": {},
+   "source": [
+    "$$ Y_{eq}(x)= \\frac{45}{2 \\pi^4} \\frac{g}{g_{*s}}x^{3/2}e^{-x}= 0.145 \\frac{g}{g_{*s}}x^{3/2}e^{-x} $$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c3674905",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "718a5333",
+   "metadata": {},
+   "source": [
+    "$$\\Omega h^2 \\approx \\frac{3 \\times 10^{-27}cm^3/s}{\\langle \\sigma_{ann}v \\rangle}  \\approx 0.12 \\ \\ \\ \\ \\ \\ (\\text{Plank result})$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ac2be915",
+   "metadata": {},
+   "source": [
+    "$$1 \\text{cm}= 5.068 \\times 10^{13} \\hbar c \\cdot \\text{GeV}^{-1}\n",
+    "    \\\\\n",
+    "    1s= 1.519 \\times 10^{24} \\hbar \\cdot \\text{GeV}^{-1}\n",
+    "    \\\\\n",
+    "    0.1 \\text{pb} \\approx 2.6 \\times 10^{-10} \\hbar c \\cdot \\text{GeV}^{-2}$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "cf8374fe",
+   "metadata": {},
+   "source": [
+    "$$\\langle \\sigma v \\rangle = 3 \\times 10^{-26} \\frac{(5.068 \\times 10^{13} \\hbar c \\cdot \\text{GeV}^{-1})^3}{1.519 \\times 10^{24} \\hbar \\cdot \\text{GeV}^{-1}}= 2.6 \\times 10^{-9} (\\hbar c)^2 \\text{Gev}^{-2} c$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5f8e7c25",
+   "metadata": {},
+   "source": [
+    "$$\\Omega_{\\chi}h^2= \\frac{\\rho_{\\chi}^0h^2}{\\rho_c^0}= \\frac{m_{\\chi}s_0 Y_0 h^2}{\\rho_c^0} \\ \\ \\ \\ \\ \\ \\ \\ \\ \\  s_0= \\frac{2 \\pi^2}{45}g_{*s}(T_{\\gamma}) T_{\\gamma}^3$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d41cfbb1",
+   "metadata": {},
+   "source": [
+    "$$\\frac{s_0 h^2}{\\rho_c^0}= \\frac{3120 \\times 0.71^2}{1.05375 \\times 10^{-5}} \\approx 1.5 \\times 10^{8}$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5848e2ce",
+   "metadata": {},
+   "source": [
+    "$$\\Omega_{\\chi}h^2= 1.5 \\times 10^{8} m_\\chi Y_0 (c^2/ \\text{GeV})= 1.5 \\times 10^{10} Y_0 \\Big( \\frac{m_\\chi}{100 \\text{GeV}/c^2} \\Big)\\rightarrow = 0.118$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2025667d",
+   "metadata": {},
+   "source": [
+    "$$ Y_0= 7.9 \\times 10^{-12}\\Big( \\frac{100 \\text{GeV}/c^2}{m_\\chi} \\Big)$$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "13fef6be",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "code",
    "execution_count": 567,
-   "id": "dbb4bfe6",
+   "id": "d5d7a2f6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1160,7 +1244,7 @@
   {
    "cell_type": "code",
    "execution_count": 568,
-   "id": "f02ff6db",
+   "id": "4acaced7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1187,7 +1271,7 @@
   {
    "cell_type": "code",
    "execution_count": 569,
-   "id": "ed51cbef",
+   "id": "37b65705",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1200,7 +1284,7 @@
   {
    "cell_type": "code",
    "execution_count": 571,
-   "id": "fe97f52c",
+   "id": "c75c6f64",
    "metadata": {},
    "outputs": [
     {
@@ -1276,7 +1360,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "707310bf",
+   "id": "7dc70c4f",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1284,7 +1368,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c0b0d2cd",
+   "id": "5c43cfcd",
    "metadata": {},
    "outputs": [],
    "source": []
