--- a/WIMP_relic_computation.ipynb
+++ b/WIMP_relic_computation.ipynb
@@ -1151,7 +1151,7 @@
    "id": "195b162c",
    "metadata": {},
    "source": [
-    "$$ Y_{eq}(x)= \\frac{45}{2 \\pi^4} \\frac{g}{g_{*s}}x^{3/2}e^{-x}= 0.145 \\frac{g}{g_{*s}}x^{3/2}e^{-x} $$"
+    "$$ Y_{eq}(x)= \\frac{45}{2 \\pi^4} \\frac{g_{\\chi}}{g_{*s}}x^{3/2}e^{-x}= 0.145 \\frac{g_{\\chi}}{g_{*s}}x^{3/2}e^{-x} $$"
    ]
   },
   {
@@ -1160,7 +1160,9 @@
    "id": "fb5850ee",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# add g_{chi}/g_* term at the Y_eq!!!!!"
+   ]
   },
   {
    "cell_type": "markdown",
