--- a/WIMP_relic_computation.ipynb
+++ b/WIMP_relic_computation.ipynb
@@ -1248,7 +1248,9 @@
     "    yota[point4] = 0.145*x[point4]**(3/2)*np.exp(-x[point4])*2/g_star4(m/x[point4])\n",
     "    yota[point6] = 0.145*x[point6]**(3/2)*np.exp(-x[point6])*2/g_star6(m/x[point6])\n",
     "    yota[point5] = 0.145*x[point5]**(3/2)*np.exp(-x[point5])*2/g_star5(m/x[point5])\n",
-    "    return yota"
+    "    return yota\n",
+    "\n",
+    "# THIS ONE CAN BE PLOTTED BUTH NOE USED FOR INTEGRATION"
    ]
   },
   {
@@ -1285,7 +1287,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 53,
    "id": "d5d7a2f6",
    "metadata": {},
    "outputs": [],
@@ -1296,7 +1298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 54,
    "id": "4acaced7",
    "metadata": {},
    "outputs": [],
@@ -1318,12 +1320,15 @@
     "    elif 9.3873<T<162.48:\n",
     "        return k*np.sqrt(g_star6(T))/x**2\n",
     "    else:\n",
-    "        return k*np.sqrt(g_star5(T))/x**2"
+    "        return k*np.sqrt(g_star5(T))/x**2\n",
+    "    \n",
+    "\n",
+    "# THIS ONE CAN BE USED FOR INTEGRATION BUT CANNOT BE PLOTTED"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 55,
    "id": "37b65705",
    "metadata": {},
    "outputs": [],
@@ -1336,7 +1341,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 56,
    "id": "c75c6f64",
    "metadata": {},
    "outputs": [
