--- a/WIMP_relic_computation_solveivp.ipynb
+++ b/WIMP_relic_computation_solveivp.ipynb
@@ -1287,7 +1287,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 175,
+   "id": "79e50011",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def Yequil(xx):\n",
+    "    T=m/x\n",
+    "    if T<= 0.01668479:\n",
+    "        return 0.145*xx**(3/2)*np.exp(-xx)*2/g_star1(T)   #missing piece of the formula.\n",
+    "    elif 0.01668479<T<=0.11748257:\n",
+    "        return 0.145*xx**(3/2)*np.exp(-xx)*2/g_star2(T)\n",
+    "    elif 0.11748257<T<=0.22748515:\n",
+    "        return 0.145*xx**(3/2)*np.exp(-xx)*2/g_star3(T)\n",
+    "    elif 0.22748515<T<=8.6167:\n",
+    "        return 0.145*xx**(3/2)*np.exp(-xx)*2/g_star4(T)\n",
+    "    elif 8.6167<T<=162.48:\n",
+    "        return 0.145*xx**(3/2)*np.exp(-xx)*2/g_star6(T)\n",
+    "    else:\n",
+    "        return 0.145*xx**(3/2)*np.exp(-xx)*2/g_star5(T)\n",
+    "    \n",
+    "    \n",
+    "# IF I USE THIS ONE INSTEAD OF Yeq I GOT THE FOLLOWING ERROR:\n",
+    "# The truth value of an array with more than one element is ambiguous. Use a.any() or a.all() !!!!! \n",
+    "# HOW TO PUNT THE g_* INSIDE OF THE EQUILIBRIUM DISTRIBUTION?!?!?!?\n",
+    "\n",
+    "# SAME FOR Yequilibrium. Y is a piecewise define function, what I have to do?!?!?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 176,
    "id": "d5d7a2f6",
    "metadata": {},
    "outputs": [],
@@ -1298,7 +1328,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 154,
+   "execution_count": 177,
    "id": "4acaced7",
    "metadata": {},
    "outputs": [],
@@ -1328,7 +1358,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 155,
+   "execution_count": 181,
    "id": "37b65705",
    "metadata": {},
    "outputs": [],
@@ -1341,8 +1371,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 156,
-   "id": "fc04ddc5",
+   "execution_count": 182,
+   "id": "c99ba782",
    "metadata": {},
    "outputs": [
     {
@@ -1360,7 +1390,7 @@
        "0.053342518969859136"
       ]
      },
-     "execution_count": 156,
+     "execution_count": 182,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1375,8 +1405,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 157,
-   "id": "ca6175f3",
+   "execution_count": 183,
+   "id": "578e6df9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1388,7 +1418,7 @@
   {
    "cell_type": "code",
    "execution_count": 159,
-   "id": "7e941db5",
+   "id": "6d4100de",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1399,8 +1429,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 164,
-   "id": "bf2e00b4",
+   "execution_count": 184,
+   "id": "00f8e19c",
    "metadata": {},
    "outputs": [
     {
