--- a/WIMP-relic-computation/WIMP_relic_computation_solveivp.ipynb
+++ b/WIMP-relic-computation/WIMP_relic_computation_solveivp.ipynb
@@ -1373,7 +1373,7 @@
   {
    "cell_type": "code",
    "execution_count": 62,
-   "id": "07cb0c1e",
+   "id": "83bd6366",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1480,15 +1480,21 @@
     "plt.legend()\n",
     "plt.grid()\n",
     "\n",
-    "# x grows in time means that the temperature decrease"
+    "# x grows in time means that the temperature decrease\n",
+    "\n",
+    "\n",
+    "\n",
+    "#**************\n",
+    "# Here ends the part in which I managed to reproduce the WIMP relic density properly,\n",
+    "# succeding also in putting in the g_* into Y_equilibrium, that was giving many problems.."
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "24edf55f",
+   "id": "7ba17e22",
    "metadata": {},
    "source": [
-    "## Here ends the pert in which I managed to reproduce the WIMP relic density properly, succeding also in putting in the g_* insto Y_equilibrium, that was giving many problems.."
+    "## Here ends the part in which I managed to reproduce the WIMP relic density properly, succeding also in putting in the g_* insto Y_equilibrium, that was giving many problems.."
    ]
   },
   {
